<resources>
    <string name="app_name">FootballMatchSchedule</string>

    <string name="prev_match">Prev. Match</string>
    <string name="next_match">Next Match</string>

    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>

    <string-array name="league_id">
        <item>4328</item>
        <item>4329</item>
        <item>4331</item>
        <item>4332</item>
        <item>4334</item>
        <item>4335</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="vs">vs</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="lineups">Lineups</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="subtitutes">Subtitutes</string>
    <string name="favorite">Favorite</string>
    <string name="favorites">Favorites</string>
    <string name="forward">Forward</string>
    <string name="logo_team_away">Logo Team Away</string>
    <string name="title_activity_coba">CobaActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="teams">Teams</string>
    <string name="match">Match</string>
    <string name="title_activity_team_detail2">TeamDetail2Activity</string>
    <string name="overview">Overview</string>
    <string name="players">Players</string>
    <string name="logo_team">Logo Team</string>
    <string name="weight_kg">Weight (Kg)</string>
    <string name="height_m">Height (m)</string>
    <string name="image_player">Image Player</string>
    <string name="football_match_schedule">Football Match Schedule</string>

</resources>
