<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.riluq.footballmatchschedule.Main2Activity">
    <item
        android:id="@+id/searchMenu"
        android:title="Search"
        android:icon="@drawable/ic_action_action_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
</menu>
